# DLVis

./: CMakeLists.txt  main.cpp
include/: clear_screen.h  node.h  theory.h  utils.h  visualization.h
include/pdcurses/: curses.h
src/: clear_screen.cpp  theory.cpp  utils.cpp  visualization.cpp
theory/: stupid_questions.txt  stupid_theory.txt
